fix images and gallery hover

--- a/index.html
+++ b/index.html
@@ -21,22 +21,26 @@
                 <ul class="socials">
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon socials__icon_place_header" src="./images/header/github-icon.svg" alt="Лого Github">
+                            <img class="socials__icon socials__icon_place_header" src="./images/header/github-icon.svg"
+                                alt="Лого Github">
                         </a>
                     </li>
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon socials__icon_place_header" src="./images/header/twitter-icon.svg" alt="Лого Twitter">
+                            <img class="socials__icon socials__icon_place_header" src="./images/header/twitter-icon.svg"
+                                alt="Лого Twitter">
                         </a>
                     </li>
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon socials__icon_place_header" src="./images/header/instagram-icon.svg" alt="Лого Instagram">
+                            <img class="socials__icon socials__icon_place_header"
+                                src="./images/header/instagram-icon.svg" alt="Лого Instagram">
                         </a>
                     </li>
                     <li class="socials__item">
                         <a class="socials__link" href="#">
-                            <img class="socials__icon socials__icon_place_header" src="./images/header/facebook-icon.svg" alt="Лого Facebook">
+                            <img class="socials__icon socials__icon_place_header"
+                                src="./images/header/facebook-icon.svg" alt="Лого Facebook">
                         </a>
                     </li>
                 </ul>
@@ -157,20 +161,14 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-4.jpg" alt="Просторная рабочая зона">
                     <img class="gallery__item" src="./images/section-4/Rectangle-5.jpg" alt="Вывеска Figma">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                        <div class="gallery__hover">
-                            <img class="gallery__item" src="./images/section-4/Rectangle-6.jpg"
-                                alt="Работа на ноутбуке">
-                        </div>
+                        <img class="gallery__item" src="./images/section-4/Rectangle-6.jpg" alt="Работа на ноутбуке">
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-7.jpg" alt="Офисный стелаж">
                     <img class="gallery__item" src="./images/section-4/Rectangle-8.jpg" alt="Дизайн офиса">
                     <img class="gallery__item" src="./images/section-4/Rectangle-9.jpg" alt="Наш сотрудник Стелла">
                     <img class="gallery__item" src="./images/section-4/Rectangle-10.jpg" alt="Брендированая канцелярия">
                     <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                        <div class="gallery__hover">
-                            <img class="gallery__item" src="./images/section-4/Rectangle-11.jpg"
-                                alt="Вечерний вид на мост">
-                        </div>
+                        <img class="gallery__item" src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-12.jpg" alt="Ланч на работе">
                 </div>
@@ -187,7 +185,7 @@
                                 <input type="tel" class="form__input" id="phone" name="phone" placeholder="Ваш телефон">
                             </div>
                             <button class="button button_place_footer" type="submit"
-                                value="consultation">Бесплатная&nbsp;консультация</button>
+                                value="consultation">Бесплатная консультация</button>
                         </form>
 
                         <div class="footer__text-container">
