--- a/index.html
+++ b/index.html
@@ -125,29 +125,35 @@
                         <li class="project">
                             <img src="./images/section-3/1-rectangle.jpg" alt="Проект 'The curious corner
                             of chamarel'" class="project__image">
-                            <h3 class="project__title">The curious corner
-                                of chamarel</h3>
-                            <a class="project__link"
-                                href="https://mauritiusattractions.com/curious-corner-chamarel-p-575.html"
-                                target="_blank">Посмотреть</a>
+                            <div class="project__container">
+                                <h3 class="project__title">The curious corner
+                                    of chamarel</h3>
+                                <a class="project__link"
+                                    href="https://mauritiusattractions.com/curious-corner-chamarel-p-575.html"
+                                    target="_blank">Посмотреть</a>
+                            </div>
                         </li>
                         <li class="project">
                             <img src="./images/section-3/2-rectangle.jpg" alt="Проект 'Gymkhana club golf
                             course'" class="project__image">
-                            <h3 class="project__title">Gymkhana club golf
-                                course</h3>
-                            <a class="project__link"
-                                href="https://mauritiusattractions.com/gymkhana-club-golf-course-p-269.html"
-                                target="_blank">Посмотреть</a>
+                            <div class="project__container">
+                                <h3 class="project__title">Gymkhana club golf
+                                    course</h3>
+                                <a class="project__link"
+                                    href="https://mauritiusattractions.com/gymkhana-club-golf-course-p-269.html"
+                                    target="_blank">Посмотреть</a>
+                            </div>
                         </li>
                         <li class="project">
                             <img src="./images/section-3/3-rectangle.jpg" alt="Проект 'Tamarind falls hiking
                             trip - full day'" class="project__image">
-                            <h3 class="project__title">Tamarind falls hiking
-                                trip - full day</h3>
-                            <a class="project__link"
-                                href="https://mauritiusattractions.com/hiking-trip-tamarind-falls-full-p-116.html"
-                                target="_blank">Посмотреть</a>
+                            <div class="project__container">
+                                <h3 class="project__title">Tamarind falls hiking
+                                    trip - full day</h3>
+                                <a class="project__link"
+                                    href="https://mauritiusattractions.com/hiking-trip-tamarind-falls-full-p-116.html"
+                                    target="_blank">Посмотреть</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -179,13 +185,14 @@
                     <h2 class="content-title content-title_center">Свяжитесь со мной</h2>
                     <div class="footer__container">
                         <form class="form">
-                            <h3 class="form__title">Можете оставить заявку, <span class="form__title-disappear">и</span> я позвоню вам сегодня</h3>
+                            <h3 class="form__title">Можете оставить заявку, <span class="form__title-disappear">и</span>
+                                я позвоню вам сегодня</h3>
                             <div class="form__contacts">
                                 <input type="text" class="form__input" id="user" name="user" placeholder="Ваше имя">
                                 <input type="tel" class="form__input" id="phone" name="phone" placeholder="Ваш телефон">
                             </div>
-                            <button class="button button_place_footer" type="submit"
-                                value="consultation">Бесплатная консультация</button>
+                            <button class="button button_place_footer" type="submit" value="consultation">Бесплатная
+                                консультация</button>
                         </form>
 
                         <div class="footer__text-container">
