refactor: заменить видео в блоке gallery

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
                     <img class="gallery__item" src="./images/section-4/Rectangle-3.jpg" alt="Совещание">
                     <img class="gallery__item" src="./images/section-4/Rectangle-4.jpg" alt="Просторная рабочая зона">
                     <img class="gallery__item" src="./images/section-4/Rectangle-5.jpg" alt="Вывеска Figma">
-                    <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                    <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=5qap5aO4i9A">
                         <img class="gallery__item" src="./images/section-4/Rectangle-6.jpg" alt="Работа на ноутбуке">
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-7.jpg" alt="Офисный стелаж">
                     <img class="gallery__item" src="./images/section-4/Rectangle-8.jpg" alt="Дизайн офиса">
                     <img class="gallery__item" src="./images/section-4/Rectangle-9.jpg" alt="Наш сотрудник Стелла">
                     <img class="gallery__item" src="./images/section-4/Rectangle-10.jpg" alt="Брендированая канцелярия">
-                    <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                    <a class="gallery__link" target="_blank" href="https://www.youtube.com/watch?v=uwU7O_jLdM4">
                         <img class="gallery__item" src="./images/section-4/Rectangle-11.jpg" alt="Вечерний вид на мост">
                     </a>
                     <img class="gallery__item" src="./images/section-4/Rectangle-12.jpg" alt="Ланч на работе">
