refactor: использовать тег picture для аватарки

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                             и верстку небольшого сайта или интернет-магазина</p>
                         <a class="button button_place_hero" href="#footer">Бесплатная консультация</a>
                     </div>
-                    <img src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)" class="hero__avatar">
+                    <picture class="hero__picture">
+                        <source srcset="./images/section-1/avatar-mobile.jpg" media="(max-width: 535px)">
+                        <img class="hero__avatar" src="./images/section-1/avatar.jpg" alt="Киану Ривз (Петр Федоров)">
+                    </picture>
                 </div>
             </section>
 
@@ -219,25 +222,25 @@
                             </ul>
 
                             <ul class="socials socials_place_footer">
-                                <li class="socials__item socials__item_place_footer">
+                                <li class="socials__item">
                                     <a class="socials__link" href="#">
                                         <img class="socials__icon socials__icon_place_footer"
                                             src="./images/header/github-icon.svg" alt="Лого Github">
                                     </a>
                                 </li>
-                                <li class="socials__item socials__item_place_footer">
+                                <li class="socials__item">
                                     <a class="socials__link" href="#">
                                         <img class="socials__icon socials__icon_place_footer"
                                             src="./images/header/twitter-icon.svg" alt="Лого Twitter">
                                     </a>
                                 </li>
-                                <li class="socials__item socials__item_place_footer">
+                                <li class="socials__item">
                                     <a class="socials__link" href="#">
                                         <img class="socials__icon socials__icon_place_footer"
                                             src="./images/header/instagram-icon.svg" alt="Лого Instagram">
                                     </a>
                                 </li>
-                                <li class="socials__item socials__item_place_footer">
+                                <li class="socials__item">
                                     <a class="socials__link" href="#">
                                         <img class="socials__icon socials__icon_place_footer"
                                             src="./images/header/facebook-icon.svg" alt="Лого Facebook">
